[package]
name = "flaneur-abm"
version = "0.0.1"
authors = [
    "Kyle Slugg-Urbino <kyle.slugg@gmail.com>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.28.0"
krabmaga = "0.5.*"
osmpbf = "0.3.3"

[features]
#visualization = ["krabmaga/visualization"]
#visualization_wasm = ["krabmaga/visualization_wasm"]
